added AP CS Review Files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "java.project.sourcePaths": [
+        "Scanners",
         "Recursion",
-        "Scanners"
+        "Review Before Test"
     ]
 }
